[package]
name = "epub-builder"
version = "0.4.8"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "A Rust library for generating EPUB files"
readme = "README.md"
keywords = ["epub"]
repository = "https://github.com/lise-henry/epub-builder/"
documentation = "https://docs.rs/epub-builder"
license = "MPL-2.0"

[lib]
name = "epub_builder"
path = "src/lib.rs"

[features]
default = ["zip-command", "zip-library"]
zip-command = ["tempdir"]
zip-library = ["zip"]

[dependencies]
error-chain = "0.12"
mustache = "0.9"
lazy_static = "1"
chrono = {version = "0.4", features = ["wasmbind"] }
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
tempdir = { version = "0.3", optional = true } 
zip = { version = "^0.5", optional = true, default-features=false ,features = ["deflate"]} 
regex = "1"
html-escape = "0.2.6"

[dev-dependencies]
pretty_assertions = "0.6"
